--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "numeral": "^2.0.6",
     "react": "^16.14.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.3"
